# werkwinkeldatabank-backend

./: .env.example  .env.template  .gitignore  Jenkinsfile  README.md  justfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: codeql.yml
docs/: changes.rst
etc/: requirements-header.txt  requirements.txt
etc/ipython/profile_default/: ipython_config.py
etc/ipython/profile_default/startup/: 10-logging.py  20-django.py
scouts_wwdb_api/: manage.py
scouts_wwdb_api/apps/: admin.py
scouts_wwdb_api/apps/base/: filters.py  managers.py  serializers.py
scouts_wwdb_api/apps/base/models/: __init__.py  audit_timestamp_mixin.py  base_model.py  created_by_mixin.py  disabled_field_model.py
scouts_wwdb_api/apps/base/services/: __init__.py  disabled_field_service.py
scouts_wwdb_api/apps/files/: __init__.py  apps.py  models.py  urls.py
scouts_wwdb_api/apps/files/api/: __init__.py  serializers.py  views.py
scouts_wwdb_api/apps/files/migrations/: 0001_initial.py  0002_ckeditorfile_content_type.py  0003_remove_ckeditorfile_created_by.py  0004_auto_20210427_1506.py  0005_auto_20210430_1600.py  __init__.py
scouts_wwdb_api/apps/files/services/: __init__.py  file_service.py
scouts_wwdb_api/apps/filter_extensions/: __init__.py  fields.py  filters.py
scouts_wwdb_api/apps/oidc/: apps.py  auth.py  exceptions.py  urls.py
scouts_wwdb_api/apps/oidc/api/: __init__.py  serializers.py  views.py
scouts_wwdb_api/apps/oidc/services/: __init__.py  token_request_service.py
scouts_wwdb_api/apps/oidc/views/: refresh_view.py  token_view.py
scouts_wwdb_api/apps/scouts_auth/: __init__.py  apps.py  permissions.py  signals.py  urls.py
scouts_wwdb_api/apps/scouts_auth/api/: __init__.py  serializers.py  views.py
scouts_wwdb_api/apps/scouts_auth/initial_data/: groups.yaml
scouts_wwdb_api/apps/scouts_auth/migrations/: 0001_initial.py  0002_auto_20201008_1401.py  __init__.py
scouts_wwdb_api/apps/scouts_auth/models/: __init__.py  user.py
scouts_wwdb_api/apps/serializer_extensions/: __init__.py  serializers.py
scouts_wwdb_api/apps/workshops/: __init__.py  apps.py  exceptions.py  urls.py
scouts_wwdb_api/apps/workshops/api/: __init__.py  exceptions.py  permissions.py
scouts_wwdb_api/apps/workshops/helpers/: __init__.py  enum_helper.py
scouts_wwdb_api/apps/workshops/managers/: __init__.py  building_block_template_managers.py  category_managers.py  theme_managers.py  workshop_managers.py
scouts_wwdb_api/apps/workshops/migrations/: 0001_initial.py  0002_auto_20200727_0834.py  0002_auto_20200731_1252.py  0002_auto_20200910_1325.py  0003_auto_20200824_2108.py  0003_auto_20200917_0851.py  0004_auto_20200825_0915.py  0004_auto_20200917_0959.py  0005_auto_20200826_1030.py  0005_auto_20200918_1234.py  0006_buildingblockinstance_workshop.py  0006_workshop_short_description.py  0007_auto_20200925_0812.py  0007_category.py  0008_auto_20200828_0809.py  0008_auto_20200902_1206.py  0008_remove_workshop_is_sensitive.py  0009_auto_20200828_0826.py  0009_auto_20200904_1023.py  0009_auto_20201001_0729.py  0010_auto_20201001_1124.py  0010_workshop_is_sensitive.py  0010_workshop_workshop_status_type.py  0011_auto_20200910_1325.py  0011_auto_20201001_1126.py  0012_auto_20201002_0721.py  0013_auto_20201002_1256.py  0014_auto_20201005_1240.py  0015_auto_20201005_1432.py  0016_workshop_approving_team.py  0017_auto_20201006_0948.py  0018_auto_20201007_0750.py  0019_auto_20201008_0723.py  0019_auto_20201008_1040.py  0020_auto_20201008_0934.py  0021_merge_20201012_0833.py  0022_auto_20201012_1554.py  0023_workshop_published_at.py  0024_auto_20201013_1113.py  0025_auto_20201013_1159.py  (+9 more)
scouts_wwdb_api/apps/workshops/models/: __init__.py  building_block_instance.py  building_block_template.py  category.py  history.py  theme.py  workshop.py
scouts_wwdb_api/apps/workshops/services/: __init__.py  building_block_instance_service.py  building_block_template_service.py  category_service.py  history_service.py  theme_service.py  workshop_service.py
scouts_wwdb_api/apps/workshops/views/: __init__.py
scouts_wwdb_api/apps/wwdb_exports/: __init__.py  apps.py  services.py
scouts_wwdb_api/apps/wwdb_mails/: __init__.py  apps.py  mails.py  services.py
scouts_wwdb_api/scouts_wwdb_api/: __init__.py  asgi.py  pagination.py  settings.py  urls.py  wsgi.py
tests/: test_settings.py
(+33 files in other folders)
