[tool.poetry]
name = "scouts_wwdb_api"
version = "0.1.0"
description = "A werkwinkeldatabank api"
authors = ["Jonas Elst <jonas.elst@inuits.eu>"]

[tool.poetry.dependencies]
python = "3.8.*"
django = "3.1.*"
psycopg2 = "^2.8.5"
djangorestframework = "^3.11.0"
mozilla-django-oidc = "^1.2.3"
drf-yasg = "^1.17.1"
django-cors-headers = "^3.4.0"
django-filter = "^2.3.0"
requests = "^2.24.0"
pyyaml = "^5.3.1"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[tool.black]
line-length = 119
target-version = ['py38']
